fixed a bug with overflow on body page

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -371,8 +371,4 @@ a:link, a:visited, a:hover, a:active{
 .visiblecus{
     display: flex !important;
 }
-
-body{
-    overflow: hidden;
-}
     
